fixed exception if url contains spaces; refs #19515